k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-azure-demo-dev
  labels:
    app: k8s-azure-demo
    env: dev
