k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-azure-demo
spec:
  replicas: 1           # single replica in dev to save resources
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: IfNotPresent   # use local image if available
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
